--- a/package.json
+++ b/package.json
@@ -20,16 +20,7 @@
     "franc-min": "^6.1.0",
     "langs": "^2.0.0",
     "lodash": "^4.17.21",
-    "compromise": "^13.11.3",
-    "@radix-ui/react-checkbox": "^1.0.1",
-    "@radix-ui/react-slider": "^1.0.0",
-    "@radix-ui/react-toggle-group": "^1.0.0",
-    "@tailwindcss/forms": "^0.5.2",
-    "autoprefixer": "^10.4.12",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8",
-    "classnames": "^2.3.1",
-    "lucide-react": "^0.245.0"
+    "compromise": "^13.11.3"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.18.6"
